[package]
name = "pickpocket"
description = "Pickpocket: selects a random article from your Pocket (former Read It Later)"
homepage = "https://github.com/tiagoamaro/pickpocket-rust"
repository = "https://github.com/tiagoamaro/pickpocket-rust"
license = "MIT"
version = "0.3.0"
authors = ["Tiago Amaro <tiagopadrela@gmail.com>"]
edition = "2021"

[dependencies]
clap = "4.4.6"
dirs = "5.0.1"
open = "5.0.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
url = "2.4.1"
